--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,9 @@ cov-core==1.7
 coverage==3.7.1
 nose-cov==1.6
 nose-html==1.1
+freezegun==0.3.3
+python-dateutil==2.4.2
+six==1.9.0
 
 # Actual dependencies
 requests==2.2.1
