--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,1 @@
-# For testing
-nose==1.3.0
-mock==1.0.1
-cov-core==1.7
-coverage==3.7.1
-nose-cov==1.6
-nose-html==1.1
-freezegun==0.3.3
-python-dateutil==2.4.2
-six==1.9.0
-
-# Actual dependencies
-requests==2.2.1
+requests>=2.0.0
